Ready for Sign Up testing
Created Signup along Input validation using JS, handling of failure messages and redirecting to login page after successfull registration.

--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -31,3 +31,8 @@ input::placeholder
 {
   color: #888888 !important;
 }
+
+.customDisabled {
+  background-color: #bbbbbb !important;
+  cursor: no-drop !important;
+}
