--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -1,30 +1,47 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+
 .navbar-toggler {
     border-color: rgba(0,0,0,.0) !important;
 }
 
 body{
     background-color: rgb(248, 248, 248) !important;
+    min-height: 100vh;
+    position: relative !important;
+    padding-bottom: 50px;
 }
 
 .footer {
+	border-top: 0px solid rgb(225, 225, 225, 1);
   position: absolute !important;
   bottom: 0 !important;
   width: 100%;
   text-align: center;
-  /* Set the fixed height of the footer here */
-  height: 30px;
-  line-height: 30px; /* Vertically center the text there */
-  /* background-color: #f5f5f5; */
+  height: 50px;
+  line-height: 50px;
+  background-color: white !important;
+  margin-top: -50px;
+  clear: both;
+}
+
+.header
+{
+	height: 60px;
 }
 
 #page-container {
   position: relative;
-  min-height: 100vh;
+  padding-top: 40px;
+  /* min-height: calc(100vh - 50px); */
 }
 
 #content-wrap
 {
-  padding-bottom: 30px;
+	overflow: auto;
+  	padding-bottom: 30px;
 }
 
 input::placeholder
