1. Display user dashboard: 	1. Fetches user's application statuses from backend and creates kanban boards. 	2. Fetches user's applications from backend and adds it to its respective board.
2. Adding shell script to build, and run war file in tomcat to make deployment and testing easier.

--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -82,3 +82,17 @@ input::placeholder
 	padding-left: 15px;
 	padding-right: 15px;
 }
+
+.kdiv {
+	overflow-x: scroll;
+  	overflow-y: hidden;
+  	white-space: nowrap;
+}
+
+.display-none {
+	display:none;
+}
+
+.display-block{
+	display:block;
+}
