1. Making changes to the site logo. 2. Adding Actions -> Add Status button

--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -96,3 +96,14 @@ input::placeholder
 .display-block{
 	display:block;
 }
+
+
+
+
+/** HEADER **/
+
+
+.logo {
+	max-width: 50px;
+	max-height: 50px;
+}
